# tradeforge-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/backend/: .gitignore  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/core/: settings.py
apps/backend/app/db/: database.py
apps/backend/app/models/: user.py
docs/: architecture.md  decisions.md
